Fixed a z-index

--- a/src/containers/navbar/Navbar.scss
+++ b/src/containers/navbar/Navbar.scss
@@ -68,6 +68,7 @@
   margin-left: 1rem;
   display: none;
   position: relative;
+  z-index: 10;
   svg {
     cursor: pointer;
   }
